--- a/blocks/place/__img/place__img.css
+++ b/blocks/place/__img/place__img.css
@@ -2,6 +2,7 @@
   max-width: 460px;
   max-height: 460px;
   object-fit: cover;
+  width: 100%;
 }
 
 @media all and (max-width: 1024px) {
